# luci-ros2-grpc

./: .gitignore  NOTICE.md  README.md
.github/workflows/: package-and-release.yml
docs/: grpc_package.md
luci_grpc_interface/: .gitignore  CMakeLists.txt  clang-format-all.sh  deploy-package.sh  package.xml  ptolemy.proto  sensors.proto
luci_grpc_interface/client/: CMakeLists.txt  README.md
luci_grpc_interface/client/include/client/: client.h  closed_exception.h  common_types.h  data_buffer.h
luci_grpc_interface/client/src/: client.cpp
luci_grpc_interface/common-scripts/: cv-helpers.hpp
luci_grpc_interface/demo_script/: demo.sh  luci_demo_ui.py
luci_grpc_interface/generated_code/client_library/: ptolemy.grpc.pb.cc  ptolemy.grpc.pb.h  ptolemy.pb.cc  ptolemy.pb.h  sensors.grpc.pb.cc  sensors.grpc.pb.h  sensors.pb.cc  sensors.pb.h  sensors_pb2.py  sensors_pb2_grpc.py
luci_grpc_interface/generated_code/sensors_grpc/: sensors.grpc.pb.cc  sensors.grpc.pb.h  sensors.pb.cc  sensors.pb.h  sensors_pb2.py  sensors_pb2_grpc.py
luci_grpc_interface/include/: client.h  closed_exception.h  data_buffer.h  differentiator.h  interface.h
luci_grpc_interface/interface/: CMakeLists.txt
luci_grpc_interface/interface/include/grpc_interface/: closed_exception.h  data_buffer.h  differentiator.h  interface.h
luci_grpc_interface/interface/src/: differentiator.cpp  interface.cpp  main.cpp
luci_grpc_interface/sensors_grpc/: CMakeLists.txt  gen-proto.sh  sensors.proto
luci_grpc_interface/src/: client.cpp  differentiator.cpp  interface.cpp
