<?xml version="1.0"?>
<package format="3">
  <name>luci_grpc_interface</name>
  <version>1.4.0</version>
  <description>The grpc_interface package</description>

  <maintainer email="christian@luci.com">christian</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <!-- Note not including the luci_message package here as its easier to build without it needing to be in rosdep -->
  <!-- <depend>luci_messages</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
